Add attach mode support