@@ -47,6 +47,10 @@
                     <source>21</source>
                     <target>21</target>
                     <encoding>UTF-8</encoding>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.attach</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             
@@ -65,8 +69,11 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Premain-Class>com.iast.agent.IastAgent</Premain-Class>
+                                        <Agent-Class>com.iast.agent.IastAgent</Agent-Class>
+                                        <Main-Class>com.iast.agent.AttachTool</Main-Class>
                                         <Can-Retransform-Classes>true</Can-Retransform-Classes>
                                         <Can-Redefine-Classes>true</Can-Redefine-Classes>
+                                        <Can-Set-Native-Method-Prefix>true</Can-Set-Native-Method-Prefix>
                                         <Boot-Class-Path>iast-agent.jar</Boot-Class-Path>
                                     </manifestEntries>
                                 </transformer>
